--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,3 +7,15 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %div{class: "wrapper"}
+      %div{class: "content"}
+        %div{class: "left-content"}
+          %div{class: "my_account"}
+          %div{class: "group"}
+          %div{class: "group"}
+        %div{class: "right-content"}
+          %div{class: "current_group"}
+          %div{class: "message"}
+          %div{class: "message"}
+          %div{class: "message"}
+          %form{class: "message_send"}
