--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -11,11 +11,29 @@
       %div{class: "content"}
         %div{class: "left-content"}
           %div{class: "my_account"}
+            %p{class: "my_account__name"} yosukenn
+            %a{class: "my_account__create"} img
+            %a{class: "my_account__edit"} img
           %div{class: "group"}
+            %p{class: "group__name"} group1
+            %p{class: "group__message"} こんにちは
           %div{class: "group"}
+            %p{class: "group__name"} group2
+            %p{class: "group__message"} こんばんは
         %div{class: "right-content"}
           %div{class: "current_group"}
+            %p{class: "current_group__name"} group1
+            %p{class: "current_group__members"} members: yosukenn, yasuda
           %div{class: "message"}
+            %p{class: "message__name"} yosukenn
+            %p{class: "message__date"}  2018/07/27 07:56
+            %p{class: "message__text"}  久しぶり
+            %img{class: "message__img", src: "https://upload.wikimedia.org/wikipedia/en/thumb/9/99/MarioSMBW.png/220px-MarioSMBW.png"}
           %div{class: "message"}
-          %div{class: "message"}
+            %p{class: "message__name"}  yasuda
+            %p{class: "message__date"}  2018/07/27 09:67
+            %p{class: "message__text"}  元気
           %form{class: "message_send"}
+            %input{class: "message_send__text", type: "text"}
+            %input{class: "message_send__image", type: "file"}
+            %input{class: "message_send__btn", type: "submit"}
