--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,10 +10,10 @@
     %div{class: "wrapper"}
       %div{class: "content"}
         %div{class: "left-content"}
-          %div{class: "my_account"}
-            %p{class: "my_account__name"} yosukenn
-            %a{class: "my_account__create"} img
-            %a{class: "my_account__edit"} img
+          %div{class: "my-account"}
+            %p{class: "my-account__name"} yosukenn
+            %a{class: "my-account__create"} img
+            %a{class: "my-account__edit"} img
           %div{class: "group"}
             %p{class: "group__name"} group1
             %p{class: "group__message"} こんにちは
@@ -21,9 +21,9 @@
             %p{class: "group__name"} group2
             %p{class: "group__message"} こんばんは
         %div{class: "right-content"}
-          %div{class: "current_group"}
-            %p{class: "current_group__name"} group1
-            %p{class: "current_group__members"} members: yosukenn, yasuda
+          %div{class: "current-group"}
+            %p{class: "current-group__name"} group1
+            %p{class: "current-group__members"} members: yosukenn, yasuda
           %div{class: "message"}
             %p{class: "message__name"} yosukenn
             %p{class: "message__date"}  2018/07/27 07:56
