--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,6 +8,8 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     %div{class: "wrapper"}
+      %div{class: "notice"}
+        %p{class: "notice__sentense"}チャットグループが作成されました。
       %div{class: "content"}
         %div{class: "left-content"}
           %div{class: "my-account"}
