Rename class content contents

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,7 +10,7 @@
     %div{class: "wrapper"}
       %div{class: "notice"}
         %p{class: "notice__sentense"}チャットグループが作成されました。
-      %div{class: "content"}
+      %div{class: "contents"}
         %div{class: "left-content"}
           %div{class: "my-account"}
             %p{class: "my-account__name"} yosukenn
