--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,16 +7,15 @@
   background-color: $blue-color;
   &__sentense {
     text-align: center;
-    color: #fff;
+    color: $white;
   }
 }
 
 .left-content {
   float: left;
-  width: 260px;
+  width: 300px;
   height: 100vh;
   background-color: #2f3e51;
-  padding: 24px + 28px 20px 0;
 }
 
 .right-content {
@@ -25,4 +24,31 @@
   height: 100vh;
   background-color: #f0f0f0;
   padding: 24px + 28px 40px 0;
+}
+
+.my-account {
+  background-color: #253141;
+  width: 260px;
+  padding-bottom: 20px;
+  height: 90px;
+  padding: 28px 20px 0;
+  &__name {
+    color: $white;
+    font-size: 16px;
+    font-weight: bold;
+    float: left;
+    line-height: 90px;
+  }
+  &__create {
+    float: right;
+    line-height: 90px;
+  }
+  &__edit {
+    float: right;
+    line-height: 90px;
+  }
+}
+
+.group {
+  padding: 20px 20px 0;
 }
