Edit group scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,5 +50,14 @@
 }
 
 .group {
-  padding: 20px 20px 0;
+  padding: 20px 20px 40px;
+  &__name {
+    font-size: 15px;
+    color: $white;
+    padding-bottom: 5px;
+  }
+  &__message {
+    font-style: 11px;
+    color: $white;
+  }
 }
