Add group edit ban

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -26,6 +26,7 @@
           %div{class: "current-group"}
             %p{class: "current-group__name"} group1
             %p{class: "current-group__members"} members: yosukenn, yasuda
+            %a{class: "current-group__edit", href: '/'}Edit
           %div{class: "message"}
             %p{class: "message__name"} yosukenn
             %p{class: "message__date"}  2018/07/27 07:56
