Add my-account link

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -14,8 +14,8 @@
         %div{class: "left-content"}
           %div{class: "my-account"}
             %p{class: "my-account__name"} yosukenn
-            %a{class: "my-account__create"} img
-            %a{class: "my-account__edit"} img
+            %a{class: "my-account__create", href: '/'} img
+            %a{class: "my-account__edit", href: '/'} img
           %div{class: "group"}
             %p{class: "group__name"} group1
             %p{class: "group__message"} こんにちは
