--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 
 .notice {
   position: fixed;
+  z-index: 5;
   width: 100vw;
   background-color: $blue-color;
   &__sentense {
@@ -20,17 +21,16 @@
 
 .right-content {
   float: right;
-  width: calc(100vw - 300px - 80px);
+  width: calc(100vw - 300px);
   height: 100vh;
   background-color: #f0f0f0;
-  padding: 24px + 28px 40px 0;
 }
 
 .my-account {
   background-color: #253141;
   width: 260px;
   padding-bottom: 20px;
-  height: 90px;
+  height: 95px;
   padding: 28px 20px 0;
   &__name {
     color: $white;
@@ -59,5 +59,36 @@
   &__message {
     font-style: 11px;
     color: $white;
+  }
+}
+
+.current-group {
+  padding: 24px 40px 0;
+  width: calc(100vw - 300px - 80px);
+  background-color: $white;
+  border-bottom: 1px solid #eeeeee;
+  position: relative;
+  &__name {
+    padding: 35px 0 15px;
+    font-size: 20px;
+    color: #333333;
+    width: calc(100vw - 300px - 120px);
+  }
+  &__members {
+    font-size: 12px;
+    color: #999999;
+    width: calc(100vw - 300px - 120px);
+  }
+  &__edit {
+    float: right;
+    height: 40px;
+    padding: 0 20px;
+    line-height: 40px;
+    border: 1px solid $blue-color;
+    color: $blue-color;
+    text-decoration: none;
+    position: absolute;
+    top: 24px + 28px;
+    right: 40px;
   }
 }
