--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -25,7 +25,7 @@
         %div{class: "right-content"}
           %div{class: "current-group"}
             %p{class: "current-group__name"} group1
-            %p{class: "current-group__members"} members: yosukenn, yasuda
+            %p{class: "current-group__members"} Member : yosukenn, yasuda
             %a{class: "current-group__edit", href: '/'}Edit
           %div{class: "message"}
             %p{class: "message__name"} yosukenn
