Edit message scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@
   position: fixed;
   z-index: 5;
   width: 100vw;
-  background-color: $blue-color;
+  background-color: $blue;
   &__sentense {
     text-align: center;
     color: $white;
@@ -68,6 +68,7 @@
   background-color: $white;
   border-bottom: 1px solid #eeeeee;
   position: relative;
+  margin-bottom: 46px;
   &__name {
     padding: 35px 0 15px;
     font-size: 20px;
@@ -76,7 +77,7 @@
   }
   &__members {
     font-size: 12px;
-    color: #999999;
+    color: $gray;
     width: calc(100vw - 300px - 120px);
   }
   &__edit {
@@ -84,11 +85,34 @@
     height: 40px;
     padding: 0 20px;
     line-height: 40px;
-    border: 1px solid $blue-color;
-    color: $blue-color;
+    border: 1px solid $blue;
+    color: $blue;
     text-decoration: none;
     position: absolute;
     top: 24px + 28px;
     right: 40px;
+  }
+}
+
+.message {
+  padding: 0 40px 40px;
+  &__name {
+    padding-right: 10px;
+    float: left;
+    font-weight: bold;
+    font-size: 16px;
+    color: $black;
+  }
+  &__date {
+    color: $gray;
+    float: left;
+    font-size: 12px;
+    line-height: 24px;
+  }
+  &__text {
+    clear: both;
+    padding-top: 10px;
+    font-size: 14px;
+    color: $black;
   }
 }
