--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -31,7 +31,7 @@
             %p{class: "message__name"} yosukenn
             %p{class: "message__date"}  2018/07/27 07:56
             %p{class: "message__text"}  久しぶり
-            %img{class: "message__img", src: "https://upload.wikimedia.org/wikipedia/en/thumb/9/99/MarioSMBW.png/220px-MarioSMBW.png"}
+            / %img{class: "message__img", src: "https://upload.wikimedia.org/wikipedia/en/thumb/9/99/MarioSMBW.png/220px-MarioSMBW.png"}
           %div{class: "message"}
             %p{class: "message__name"}  yasuda
             %p{class: "message__date"}  2018/07/27 09:67
