Rename message_send message-send

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -36,7 +36,7 @@
             %p{class: "message__name"}  yasuda
             %p{class: "message__date"}  2018/07/27 09:67
             %p{class: "message__text"}  元気
-          %form{class: "message_send"}
-            %input{class: "message_send__text", type: "text"}
-            %input{class: "message_send__image", type: "file"}
-            %input{class: "message_send__btn", type: "submit"}
+          %form{class: "message-send"}
+            %input{class: "message-send__text", type: "text"}
+            %input{class: "message-send__image", type: "file"}
+            %input{class: "message-send__btn", type: "submit"}
