Edit input placeholder value

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -37,6 +37,6 @@
             %p{class: "message__date"}  2018/07/27 09:67
             %p{class: "message__text"}  元気
           %form{class: "message-send"}
-            %input{class: "message-send__text", type: "text"}
+            %input{class: "message-send__text", type: "text", placeholder: "Type a message"}
             %input{class: "message-send__image", type: "file"}
-            %input{class: "message-send__btn", type: "submit"}
+            %input{class: "message-send__btn", type: "submit", value: "Send"}
