--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
   width: calc(100vw - 300px);
   height: 100vh;
   background-color: #f0f0f0;
+  position: relative;
 }
 
 .my-account {
@@ -114,5 +115,35 @@
     padding-top: 10px;
     font-size: 14px;
     color: $black;
+  }
+}
+
+.message-send {
+  width: calc(100vw - 300px - 80px);
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 20px 40px;
+  background-color: #D4D4D4;
+  &__text {
+    color: $black;
+    font-size: 16px;
+    line-height: 50px;
+    padding-left: 10px;
+    width: 800px;
+  }
+  &__image {
+    padding-right: 10px;
+    height: 50px;
+    width: 30px;
+    line-height: 50px;
+  }
+  &__btn {
+    margin-left: 50px;
+    background-color: $blue;
+    width: 70px;
+    height: 50px;
+    color: $white;
   }
 }
