--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,19 +135,14 @@
     color: $black;
     font-size: 16px;
     line-height: 50px;
-    padding-left: 10px;
+    padding: 0 10px;
     width: 800px;
     border: 0;
   }
   &__image {
-    padding-right: 10px;
-    height: 50px;
-    width: 30px;
-    line-height: 50px;
-    background-color: $white;
+    display: none;
   }
   &__btn {
-    margin-left: 50px;
     background-color: $blue;
     width: 70px;
     height: 50px;
