--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -40,5 +40,7 @@
             %p{class: "message__text"}  元気
           %form{class: "message-send"}
             %input{class: "message-send__text", type: "text", placeholder: "Type a message"}
-            %input{class: "message-send__image", type: "file"}
+            %label
+              = fa_icon("image")
+              %input{class: "message-send__image", type: "file"}
             %input{class: "message-send__btn", type: "submit", value: "Send"}
