--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,13 +138,20 @@
     padding: 0 10px;
     width: 800px;
     border: 0;
+    position: relative;
+  }
+  &__img-icon {
+    position: absolute;
+    bottom: 33px;
+    right: 165px;
   }
   &__image {
     display: none;
   }
   &__btn {
+    margin-left: 15px;
     background-color: $blue;
-    width: 70px;
+    width: 90px;
     height: 50px;
     color: $white;
   }
