--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -39,9 +39,11 @@
             %p{class: "message__date"}  2018/07/27 09:67
             %p{class: "message__text"}  元気
           %form{class: "message-send"}
-            %input{class: "message-send__text", type: "text", placeholder: "Type a message"}
-            %label
-              %div{class: "message-send__img-icon"}
-                = fa_icon("image")
-              %input{class: "message-send__image", type: "file"}
-            %input{class: "message-send__btn", type: "submit", value: "Send"}
+            %div{class: "message-send__content"}
+              %input{class: "message-send__content__text", type: "text", placeholder: "Type a message"}
+              %div{class: "message-send__content__img"}
+                %label
+                  %div{class: "message-send__content__img-icon"}
+                    = fa_icon("image")
+                  %input{class: "message-send__content__image", type: "file"}
+                %input{class: "message-send__content__btn", type: "submit", value: "Send"}
