--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "./reset";
 @import "./variable";
 @import "font-awesome";
-@import "./messages"
+@import "./messages";
+@import "./notice";
