--- a/app/views/messages/_group.html.haml
+++ b/app/views/messages/_group.html.haml
@@ -1,6 +1,6 @@
-%div{class: "group"}
-  %p{class: "group__name"} group1
-  %p{class: "group__message"} こんにちは
-%div{class: "group"}
-  %p{class: "group__name"} group2
-  %p{class: "group__message"} こんばんは
+%div{class: "side-bar__group"}
+  %p{class: "side-bar__group__name"} group1
+  %p{class: "side-bar__group__message"} こんにちは
+%div{class: "side-bar__group"}
+  %p{class: "side-bar__group__name"} group2
+  %p{class: "side-bar__group__message"} こんばんは
