Edit div tag inscription

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,8 +1,8 @@
-%div{class: "content__message"}
+.content__message
   %p{class: "content__message__name"} yosukenn
   %p{class: "content__message__date"}  2018/07/27 07:56
   %p{class: "content__message__text"}  久しぶり
-%div{class: "content__message"}
+.content__message
   %p{class: "content__message__name"}  yasuda
   %p{class: "content__message__date"}  2018/07/27 09:67
   %p{class: "content__message__text"}  元気
