--- a/app/views/messages/_group.html.haml
+++ b/app/views/messages/_group.html.haml
@@ -1,6 +1,6 @@
-%div{class: "side-bar__group"}
+.side-bar__group
   %p{class: "side-bar__group__name"} group1
   %p{class: "side-bar__group__message"} こんにちは
-%div{class: "side-bar__group"}
+.side-bar__group
   %p{class: "side-bar__group__name"} group2
   %p{class: "side-bar__group__message"} こんばんは
