--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,27 +1,27 @@
-%div{class: "wrapper"}
-  %div{class: "notice"}
+.wrapper
+  .notice
     %p{class: "notice__sentense"}チャットグループが作成されました。
-  %div{class: "contents"}
-    %div{class: "side-bar"}
-      %div{class: "side-bar__my-account"}
+  .contents
+    .side-bar
+      .side-bar__my-account
         %p{class: "side-bar__my-account__name"} yosukenn
         = link_to root_path, method: :get,class: "side-bar__my-account__create" do
           = fa_icon("edit")
         = link_to root_path, method: :get,class: "side-bar__my-account__edit" do
           = fa_icon("cog")
       = render partial: "group"
-    %div{class: "content"}
-      %div{class: "content__current-group"}
+    .content
+      .content__current-group
         %p{class: "content__current-group__name"} group1
         %p{class: "content__current-group__members"} Member : yosukenn, yasuda
         %a{class: "content__current-group__edit", href: '/'}Edit
       = render partial: "message"
       %form{class: "content__message-send"}
-        %div{class: "content__message-send__content"}
+        .content__message-send__content
           %input{class: "content__message-send__content__text", type: "text", placeholder: "Type a message"}
-          %div{class: "content__message-send__content__img"}
+          .content__message-send__content__img
             %label
-              %div{class: "content__message-send__content__img-icon"}
+              .content__message-send__content__img-icon
                 = fa_icon("image")
               %input{class: "content__message-send__content__image", type: "file"}
             %input{class: "content__message-send__content__btn", type: "submit", value: "Send"}
