--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -14,7 +14,7 @@
       .content__current-group
         %p{class: "content__current-group__name"} group1
         %p{class: "content__current-group__members"} Member : yosukenn, yasuda
-        %a{class: "content__current-group__edit", href: '/'}Edit
+        %a{class: "content__current-group__edit", href: '#'}Edit
       = render partial: "message"
       %form{class: "content__message-send"}
         .content__message-send__content
