--- a/app/views/messages/_group.html.haml
+++ b/app/views/messages/_group.html.haml
@@ -1,6 +1,6 @@
 .side-bar__group
-  %p{class: "side-bar__group__name"} group1
-  %p{class: "side-bar__group__message"} こんにちは
+  %p.side-bar__group__name group1
+  %p.side-bar__group__message こんにちは
 .side-bar__group
-  %p{class: "side-bar__group__name"} group2
-  %p{class: "side-bar__group__message"} こんばんは
+  %p.side-bar__group__name group2
+  %p.side-bar__group__message こんばんは
