--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -16,12 +16,4 @@
         %p.content__current-group__members Member : yosukenn, yasuda
         %a.content__current-group__edit{href: '#'}Edit
       = render partial: "message"
-      %form{class: "content__message-send"}
-        .content__message-send__content
-          %input{class: "content__message-send__content__text", type: "text", placeholder: "Type a message"}
-          .content__message-send__content__img
-            %label
-              .content__message-send__content__img-icon
-                = fa_icon("image")
-              %input{class: "content__message-send__content__image", type: "file"}
-            %input{class: "content__message-send__content__btn", type: "submit", value: "Send"}
+      = render partial: "form"
