--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -8,6 +8,7 @@
     width: 260px;
     height: 95px;
     padding: 28px 20px 0;
+    position: relative;
     &__name {
       color: $white;
       font-size: 16px;
@@ -15,6 +16,10 @@
       float: left;
       line-height: 90px;
       padding-right: 130px;
+    }
+    &__icons {
+      position: absolute;
+      right: 20px;
     }
     &__create {
       float: left;
