--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,6 +1,6 @@
 .wrapper
-  .notice
-    %p.notice__sentense チャットグループが作成されました。
+  / .notice
+  /   %p.notice__sentense チャットグループが作成されました。
   .contents
     .side-bar
       = render partial: "my-account"
