Move alert style

--- a/app/assets/stylesheets/_notice.scss
+++ b/app/assets/stylesheets/_notice.scss
@@ -1,4 +1,10 @@
-.notice, .alert {
+.notice {
+  background-color: $blue;
+  text-align: center;
+  color: $white;
+}
+
+.alert {
   background-color: $blue;
   text-align: center;
   color: $white;
