Edit view header

--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -6,8 +6,8 @@
   &__my-account {
     background-color: #253141;
     width: 260px;
-    height: 95px;
-    padding: 28px 20px 0;
+    height: 98px;
+    padding: 0 20px 0;
     position: relative;
     &__name {
       color: $white;
