--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -5,7 +5,7 @@
   background-color: #f0f0f0;
   position: relative;
   &__current-group {
-    padding: 24px 40px 0;
+    padding: 0 40px 0;
     width: calc(100vw - 300px - 80px);
     background-color: $white;
     border-bottom: 1px solid #eeeeee;
@@ -31,7 +31,7 @@
       color: $blue;
       text-decoration: none;
       position: absolute;
-      top: 24px + 28px;
+      top: 28px;
       right: 40px;
     }
   }
