--- a/app/views/messages/_my-account.html.haml
+++ b/app/views/messages/_my-account.html.haml
@@ -2,7 +2,7 @@
   %p.side-bar__my-account__name
     = current_user.name
   .p.side-bar__my-account__icons
-    = link_to "#", method: :get, class: "side-bar__my-account__create" do
+    = link_to new_group_path, method: :get, class: "side-bar__my-account__create" do
       = fa_icon("edit")
     = link_to edit_user_path(current_user), method: :get, class: "side-bar__my-account__edit" do
       = fa_icon("cog")
