--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -28,6 +28,8 @@
         = f.label "チャットメンバー", class: 'chat-group-form__label'
       .chat-group-form__field--right
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
+        = f.collection_check_boxes(:user_ids, @users, :id, :name) do |user|
+          = user.label {user.check_box + user.text}
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
           <div id='chat-group-users'>
