--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,11 +1,12 @@
 .chat-group-form
   %h1 新規チャットグループ
   = form_for @group, id: "new_chat_group", class: "new_chat_group" do |f|
-    .chat-group-form__errors
-      %h2
-        1件のエラーが発生しました。
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2= "#{@group.errors.full_messages.count}件のエラーが発生しました。"
         %ul
-          %li エラーです
+          - @group.errors.full_messages.each do |message|
+            %li= message
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, "グループ名", class: 'chat-group-form__label'
@@ -28,7 +29,7 @@
         = f.label "チャットメンバー", class: 'chat-group-form__label'
       .chat-group-form__field--right
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-        = f.collection_check_boxes(:user_ids, @users, :id, :name) do |user|
+        = f.collection_check_boxes(:user_ids, User.all, :id, :name) do |user|
           = user.label {user.check_box + user.text}
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
