--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -36,6 +36,9 @@
 
   &__group {
     padding: 20px 20px 40px;
+    &__link {
+      text-decoration: none;
+    }
     &__name {
       font-size: 15px;
       color: $white;
