--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,8 +1,7 @@
 .content__message
-  %p.content__message__name yosukenn
-  %p.content__message__date 2018/07/27 07:56
-  %p.content__message__text 久しぶり
-.content__message
-  %p.content__message__name yasuda
-  %p.content__message__date 2018/07/27 09:67
-  %p.content__message__text 元気
+  - @messages.each do |message|
+    .content__message__name= message.user.name
+    %p.content__message__date= message.created_at
+    - if message.body.present?
+      %p.content__message__text= message.body
+    = image_tag message.image.url, class: 'content__message__image' if message.image.present?
