Edit time view -> fail

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,7 +1,7 @@
 .content__message
   - @messages.each do |message|
     .content__message__name= message.user.name
-    %p.content__message__date= message.created_at
+    %p.content__message__date= format_posted_time(message.created_at)
     - if message.body.present?
       %p.content__message__text= message.body
     = image_tag message.image.url, class: 'content__message__image' if message.image.present?
