--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -4,12 +4,13 @@
   height: 100vh;
   background-color: #f0f0f0;
   position: relative;
+  overflow: auto;
   &__current-group {
     padding: 0 40px 0;
     width: calc(100vw - 300px - 80px);
     background-color: $white;
     border-bottom: 1px solid #eeeeee;
-    position: relative;
+    position: fixed;
     margin-bottom: 46px;
     &__name {
       padding: 35px 0 15px;
@@ -36,7 +37,7 @@
     }
   }
   &__message {
-    padding: 0 40px 40px;
+    padding: 110px 40px;
     &__name {
       clear: both;
       padding-right: 10px;
@@ -70,7 +71,7 @@
     bottom: 0;
     right: 0;
     background-color: #D4D4D4;
-    position: absolute;
+    position: fixed;
     &__content {
       position: relative;
       &__text {
