--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -33,6 +33,7 @@
               = u.hidden_field :user_ids, name:"group[user_ids][]", value: user.id
               %p.chat-group-user__name
               = user.name
+              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
