--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -3,12 +3,13 @@
   width: 300px;
   height: 100vh;
   background-color: #2f3e51;
+  overflow: scroll;
   &__my-account {
     background-color: #253141;
     width: 260px;
     height: 98px;
     padding: 0 20px 0;
-    position: relative;
+    position: fixed;
     &__name {
       color: $white;
       font-size: 16px;
@@ -35,7 +36,7 @@
   }
 
   &__group {
-    padding: 20px 20px 40px;
+    padding: 120px 20px 40px;
     &__link {
       text-decoration: none;
     }
