Fix image layout

--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -59,7 +59,7 @@
       color: $black;
     }
     &__image {
-      float: left;
+      clear: left;
       max-width: 200px;
       max-height: 100px;
     }
